[gd_scene load_steps=7 format=3 uid="uid://dexfydyink7x1"]

[ext_resource type="Script" path="res://Options & UI/settings_tab.gd" id="1_b0hk5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v7jc8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d0534"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8rdn8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gsp75"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g786k"]

[node name="SettingsTab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1440.0
offset_bottom = -868.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b0hk5")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1

[node name="Graphics" type="TabBar" parent="TabContainer"]
layout_mode = 2
theme_override_styles/tab_focus = SubResource("StyleBoxEmpty_v7jc8")

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Graphics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Graphics/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Resolution" type="HBoxContainer" parent="TabContainer/Graphics/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 200
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Graphics/MarginContainer/VBoxContainer/Resolution"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionButton" type="OptionButton" parent="TabContainer/Graphics/MarginContainer/VBoxContainer/Resolution"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
item_count = 3
selected = 1
popup/item_0/text = "1280 x 720"
popup/item_0/id = 0
popup/item_1/text = "1920 x 1080"
popup/item_1/id = 1
popup/item_2/text = "2540 x 1440"
popup/item_2/id = 2

[node name="WindowMode" type="HBoxContainer" parent="TabContainer/Graphics/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 200
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Graphics/MarginContainer/VBoxContainer/WindowMode"]
layout_mode = 2
size_flags_horizontal = 2
text = "Display Mode"

[node name="OptionButton" type="OptionButton" parent="TabContainer/Graphics/MarginContainer/VBoxContainer/WindowMode"]
unique_name_in_owner = true
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Borderless"
popup/item_1/id = 1
popup/item_2/text = "Fullscreen"
popup/item_2/id = 2

[node name="Brightness" type="HBoxContainer" parent="TabContainer/Graphics/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Graphics/MarginContainer/VBoxContainer/Brightness"]
layout_mode = 2
text = "Brightness (lowest reccomended)"

[node name="BrightnessSlider" type="HSlider" parent="TabContainer/Graphics/MarginContainer/VBoxContainer/Brightness"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="BrightnessPercentage" type="Label" parent="TabContainer/Graphics/MarginContainer/VBoxContainer/Brightness"]
unique_name_in_owner = true
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
text = "0%"

[node name="Sound" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_styles/tab_focus = SubResource("StyleBoxEmpty_d0534")

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Sound"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Sound/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MasterSound" type="HBoxContainer" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer/MasterSound"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="TabContainer/Sound/MarginContainer/VBoxContainer/MasterSound"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
min_value = 0.001
max_value = 1.0
step = 0.01
value = 1.0

[node name="MasterVolume" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer/MasterSound"]
unique_name_in_owner = true
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "100%"

[node name="SFXSound" type="HBoxContainer" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer/SFXSound"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="TabContainer/Sound/MarginContainer/VBoxContainer/SFXSound"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
min_value = 0.001
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXVolume" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer/SFXSound"]
unique_name_in_owner = true
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "100%"

[node name="MusicSound" type="HBoxContainer" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer/MusicSound"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="TabContainer/Sound/MarginContainer/VBoxContainer/MusicSound"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
min_value = 0.001
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolume" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer/MusicSound"]
unique_name_in_owner = true
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
text = "100%"

[node name="Controls" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_styles/tab_selected = SubResource("StyleBoxEmpty_8rdn8")
theme_override_styles/tab_unselected = SubResource("StyleBoxEmpty_gsp75")
theme_override_styles/tab_focus = SubResource("StyleBoxEmpty_g786k")

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Controls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Controls/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Controls/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(460, 0)
layout_mode = 2

[node name="Left" type="HBoxContainer" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Left"]
layout_mode = 2
text = "Left
"

[node name="LeftLabel" type="Label" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Left"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "A"

[node name="LeftButtonSetting" type="Button" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Left"]
layout_mode = 2
size_flags_horizontal = 8
text = "change"

[node name="Right" type="HBoxContainer" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Right"]
layout_mode = 2
text = "Right
"

[node name="RightLabel" type="Label" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Right"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "D"

[node name="RightButtonSetting" type="Button" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Right"]
layout_mode = 2
size_flags_horizontal = 8
text = "change"

[node name="Down" type="HBoxContainer" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Down"]
layout_mode = 2
text = "Down"

[node name="DownLabel" type="Label" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Down"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "S"

[node name="DownButtonSetting" type="Button" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Down"]
layout_mode = 2
size_flags_horizontal = 8
text = "change"

[node name="Jump" type="HBoxContainer" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Jump"]
layout_mode = 2
text = "Jump"

[node name="JumpLabel" type="Label" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Jump"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "Space"

[node name="JumpButtonSetting" type="Button" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Jump"]
layout_mode = 2
size_flags_horizontal = 8
text = "change"

[node name="Attack" type="HBoxContainer" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Attack"]
layout_mode = 2
text = "Attack"

[node name="AttackLabel" type="Label" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Attack"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "Z"

[node name="AttackButtonSetting" type="Button" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Attack"]
layout_mode = 2
size_flags_horizontal = 8
text = "change"

[node name="Dodge" type="HBoxContainer" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Dodge"]
layout_mode = 2
text = "Teleport"

[node name="TeleportLabel" type="Label" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Dodge"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "Right Mouse Button"

[node name="TeleportButtonSetting" type="Button" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Dodge"]
layout_mode = 2
size_flags_horizontal = 8
text = "change"

[node name="Shoot_Light" type="HBoxContainer" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Shoot_Light"]
layout_mode = 2
text = "Shoot Light Projectile"

[node name="ShootLabel" type="Label" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Shoot_Light"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "Left Mouse Button"

[node name="ShootButtonSetting" type="Button" parent="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Shoot_Light"]
layout_mode = 2
size_flags_horizontal = 8
text = "change"

[node name="VSlider" type="VSlider" parent="TabContainer/Controls/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
value = 100.0

[node name="CanvasLayer" type="CanvasLayer" parent="TabContainer/Controls/MarginContainer"]

[node name="PopUp" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 120.0
offset_top = 53.0
offset_right = 360.0
offset_bottom = 159.0
color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[node name="Label" type="Label" parent="PopUp"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -11.5
offset_right = 43.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Input key..."

[connection signal="item_selected" from="TabContainer/Graphics/MarginContainer/VBoxContainer/Resolution/ResolutionButton" to="." method="_on_resolution_button_item_selected"]
[connection signal="item_selected" from="TabContainer/Graphics/MarginContainer/VBoxContainer/WindowMode/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="drag_ended" from="TabContainer/Graphics/MarginContainer/VBoxContainer/Brightness/BrightnessSlider" to="." method="_on_brightness_slider_drag_ended"]
[connection signal="value_changed" from="TabContainer/Graphics/MarginContainer/VBoxContainer/Brightness/BrightnessSlider" to="." method="_on_brightness_slider_value_changed"]
[connection signal="drag_ended" from="TabContainer/Sound/MarginContainer/VBoxContainer/MasterSound/MasterVolumeSlider" to="." method="_on_master_volume_slider_drag_ended"]
[connection signal="value_changed" from="TabContainer/Sound/MarginContainer/VBoxContainer/MasterSound/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="drag_ended" from="TabContainer/Sound/MarginContainer/VBoxContainer/SFXSound/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_drag_ended"]
[connection signal="value_changed" from="TabContainer/Sound/MarginContainer/VBoxContainer/SFXSound/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="drag_ended" from="TabContainer/Sound/MarginContainer/VBoxContainer/MusicSound/MusicVolumeSlider" to="." method="_on_music_volume_slider_drag_ended"]
[connection signal="value_changed" from="TabContainer/Sound/MarginContainer/VBoxContainer/MusicSound/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="pressed" from="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Left/LeftButtonSetting" to="." method="_on_left_button_setting_pressed"]
[connection signal="pressed" from="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Right/RightButtonSetting" to="." method="_on_right_button_setting_pressed"]
[connection signal="pressed" from="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Down/DownButtonSetting" to="." method="_on_down_button_setting_pressed"]
[connection signal="pressed" from="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Jump/JumpButtonSetting" to="." method="_on_jump_button_setting_pressed"]
[connection signal="pressed" from="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Attack/AttackButtonSetting" to="." method="_on_attack_button_setting_pressed"]
[connection signal="pressed" from="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Dodge/TeleportButtonSetting" to="." method="_on_teleport_button_setting_pressed"]
[connection signal="pressed" from="TabContainer/Controls/MarginContainer/HBoxContainer/VBoxContainer/Shoot_Light/ShootButtonSetting" to="." method="_on_shoot_button_setting_pressed"]
[connection signal="value_changed" from="TabContainer/Controls/MarginContainer/HBoxContainer/VSlider" to="." method="_on_v_slider_value_changed"]
